<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".activities.AccountSelectionActivity">

            <ImageView
                android:id="@+id/image_account"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/dimen_16"
                android:contentDescription="@string/account_selection"
                android:src="@drawable/ktu_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                style="@style/TextCaption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/account_selection"
                android:layout_marginTop="@dimen/dimen_32"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginEnd="@dimen/dimen_32"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_account" />

            <TextView
                android:id="@+id/textView3"
                style="@style/BodyText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16"
                android:text="@string/select_a_profile_to_continue"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_class_rep"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_70"
                android:text="@string/class_representative"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_student"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                android:text="@string/student"
                app:layout_constraintEnd_toEndOf="@+id/button_class_rep"
                app:layout_constraintStart_toStartOf="@+id/button_class_rep"
                app:layout_constraintTop_toBottomOf="@+id/button_class_rep" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>